# bifrost

./: LICENSE  README.md  pyproject.toml
src/bifrost/: __init__.py  config.py  core.py
src/bifrost/bridges/: memory_bridge.py
tests/: test_bifrost.py  test_hebbian_guard.py
