[project]
name = "bifrost"
version = "1.0.0"
description = "Bifrǫst Bridge — Composite Memory Provider connecting Mímir, Huginn, and Muninn"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Runa Gridweaver"}, {name = "Volmarr Viking"}]

dependencies = []

[project.optional-dependencies]
huginn = ["huginn"]
muninn = ["muninn"]
dev = ["pytest>=7.0", "pytest-cov"]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]